[package]
name = "ecson"
version = "0.0.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/hino-rs/ecson"
keywords = ["gameserver", "ecs", "websocket", "realtime", "webtransport"]
categories = ["network-programming", "asynchronous"]
description = "ECS-driven stateful bidirectional server framework for Rust"

[dependencies]
bevy_ecs = "0.18.1"
env_logger = "0.11.10"
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
wtransport = { version = "0.7.0", features = ["self-signed"] }
