[package]
name = "ecson_core"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/hino-rs/ecson"
description = "Core types and application runner for the Ecson server framework"
keywords = ["gameserver", "ecs", "realtime"]
categories = ["network-programming", "asynchronous"]

[dependencies]
bevy_ecs = "0.18.1"
tracing = "0.1.44"
tokio = { version = "1.50.0", features = ["full"] }