[package]
name = "ecson_macros"
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/hino-rs/ecson"
description = "Derive macros for the Ecson server framework (reserved for future use)"
keywords = ["gameserver", "ecs", "realtime", "macros"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
bevy_ecs = "0.18.1"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
