[package]
name = "ecson_network"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hino-rs/ecson"
description = "WebSocket and WebTransport server implementations for the Ecson server framework"
keywords = ["gameserver", "websocket", "webtransport", "realtime"]
categories = ["network-programming", "asynchronous"]

[dependencies]
ecson_core = { path = "../ecson_core", version = "0.2.0" }
ecson_ecs = { path = "../ecson_ecs", version = "0.2.0" }
bevy_ecs = "0.18.1"
futures-util = "0.3.32"
rcgen = "0.14.7"
rustls = "0.23.37"
rustls-pemfile = "2.2.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
wtransport = { version = "0.7.0", features = ["self-signed"] }